fix some display issues in dark mode.

--- a/csses.css
+++ b/csses.css
@@ -4,12 +4,17 @@
 	left: 0px;
 	height: 100%;
 	width: 50px;
+	color: black;
 	background-color: cyan;
 	z-index: 2;
 	overflow-x: hidden;
 	overflow-y: auto;
 	white-space: nowrap;
 	transition: width 0.5s;
+}
+
+#sidebar a {
+	color: blue;
 }
 
 #sidebar:hover {
@@ -56,7 +61,6 @@ body {
 }
 
 a {
-	color: blue;
 	text-decoration: none;
 }
 
@@ -67,7 +71,7 @@ a:hover {
 
 hr {
 	border: none;
-	border-top: 1px solid #ccc;
+	border-top: 1px solid black;
 	margin: 20px 0;
 	left: -10px;
 	position: relative;
@@ -76,12 +80,9 @@ hr {
 blockquote {
 	margin: 20px 0;
 	padding: 10px 20px;
-	background-color: #f9f9f9;
-	border-left: 5px solid #ccc;
 }
 
 .block-item {
-	background-color: lightgray;
 	display: inline-block;
 	padding: 10px;
 	border: 5px solid;
@@ -89,5 +90,17 @@ blockquote {
 }
 
 table, th, td {
-	border: solid black;
+	border: solid;
+}
+
+.buttonInTable:hover {
+	cursor: pointer;
+}
+
+.disabledButtonInTable {
+	color: darkgray;
+}
+
+.disabledButtonInTable:hover {
+	cursor: not-allowed;
 }
